--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Rework white-sass",
   "main": "src/app.scss",
+  "files": [
+    "src/tools/_tools.scss"
+  ],
   "scripts": {
     "build": "sass src/app.scss dist/index.css --style=compressed",
     "prepare": "husky"
