--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "@whitecube/white-sass",
   "version": "0.0.1",
   "description": "Rework white-sass",
-  "main": "src/app.scss",
-  "sass": "src/app.scss",
+  "main": "src/index.scss",
   "exports": {
     ".": {
-      "sass": "./src/app.scss"
+      "sass": "./src/index.scss"
     }
   },
   "scripts": {
-    "build": "sass src/app.scss dist/index.css --style=compressed",
+    "build": "sass src/index.scss dist/index.css --style=compressed",
     "prepare": "husky"
   },
   "repository": {
