--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "exports": {
     ".": {
       "sass": "./src/_index.scss"
+    },
+    "./tools": {
+      "sass": "./src/tools/_tools.scss"
+    },
+    "./config/colors": {
+      "sass": "./src/config/_colors.scss"
     }
   },
   "scripts": {
