remove config from tools and add custom dedicated file

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "./tools/functions/*": {
       "sass": "./src/sass/tools/functions/*.scss"
     },
-    "./config/*": {
-      "sass": "./src/sass/config/*.scss"
+    "./config": {
+      "sass": "./src/sass/lib/config.scss"
     }
   },
   "scripts": {
