--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "./tools": {
       "sass": "./src/sass/tools/_tools.scss"
     },
+    "./lib": {
+      "sass": "./src/sass/lib/*.scss"
+    },
     "./tools/mixins/*": {
       "sass": "./src/sass/tools/mixins/*.scss"
     },
